corrigindo links dos videos

--- a/modulo1.html
+++ b/modulo1.html
@@ -73,10 +73,10 @@
                                 <td rowspan=3>Slides</td>
                                 <td rowspan=3>Exerc&iacute;cios</td>
                                 <td rowspan=3>Respostas</td>
-                                <td><a target="_blank" href="https://www.youtube.com/watch?v=iSTnk9nwmXc">Videoaula 09/08/2014</a></td>
+                                <td><a target="_blank" href="https://www.youtube.com/watch?v=pDN8LGXD21M">Videoaula 09/08/2014</a></td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="https://www.youtube.com/watch?v=fg-mW2m6GGk">Videoaula 10/08/2014</a></td>
+                                <td><a target="_blank" href="https://www.youtube.com/watch?v=LSiDjso_ktk">Videoaula 10/08/2014</a></td>
                             </tr>
                             <tr>
                                 <td>Videoaula 16/08/2014</td>
