--- a/sobremim.html
+++ b/sobremim.html
@@ -20,7 +20,7 @@
                 <li class="first"><a href="index.html" accesskey="1" title="In&iacute;cio">In&iacute;cio</a></li>
                 <li><a href="projetos.html" accesskey="2" title="Projetos">Projetos</a></li>
                 <li><a href="recomendacoes.html" accesskey="3" title="Recomenda&ccedil;&otilde;es">Recomenda&ccedil;&otilde;es</a></li>
-                <li><a class="current" href="sobremim.html" accesskey="4" title="Sobre Mim">Sobre Mim</a></li>
+                <li><a class="current" href="sobremim.html" accesskey="4" title="Sobre mim">Sobre mim</a></li>
             </ul>
         </div>
         <hr />
