--- a/recomendacoes.html
+++ b/recomendacoes.html
@@ -70,7 +70,9 @@
         <!-- end page -->
         
         <div id="footer">
-            <p class="legal">Copyright (c) 2014 William Ivanski. Todos os direitos reservados.</p>
+            <p class="legal">
+                <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Licença Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />Esta <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Dataset" rel="dct:type">obra</span> de <span xmlns:cc="http://creativecommons.org/ns#" property="cc:attributionName">William Ivanski</span> está licenciada com uma Licença <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Atribuição 4.0 Internacional</a>.
+            </p>
             <p class="credit">Designed by <a href="http://www.nodethirtythree.com/">NodeThirtyThree</a> + <a href="http://www.freecsstemplates.org">FCT</a></p>
         </div>
     </body>
