Slides e exercicios capitulo 3

--- a/modulo1.html
+++ b/modulo1.html
@@ -59,8 +59,8 @@
                             <tr>
                                 <td rowspan=2>Cap&iacute;tulo 2 - IDE e Vari&aacute;veis</td>
                                 <td rowspan=2><a href="curso/modulo1capitulo2.pptx">Slides</a></td>
-                                <td rowspan=2><a target="_blank" href="curso/lista2.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=2><a target="_blank" href="curso/respostas2.html">Respostas</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1lista2.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas2.html">Respostas</a></td>
                                 <td><a target="_blank" href="https://www.youtube.com/watch?v=iSTnk9nwmXc">Videoaula 02/08/2014</a></td>
                             </tr>
                             <tr>
@@ -70,8 +70,8 @@
                             <!-- capitulo 3 -->
                             <tr>
                                 <td rowspan=3>Cap&iacute;tulo 3 - Fluxo de C&oacute;digo e Operador Condicional</td>
-                                <td rowspan=3>Slides</td>
-                                <td rowspan=3>Exerc&iacute;cios</td>
+                                <td rowspan=3><a href="curso/modulo1capitulo3.pptx">Slides</a></td>
+                                <td rowspan=3><a target="_blank" href="curso/modulo1lista3.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=3>Respostas</td>
                                 <td><a target="_blank" href="https://www.youtube.com/watch?v=pDN8LGXD21M">Videoaula 09/08/2014</a></td>
                             </tr>
