--- a/recomendacoes.html
+++ b/recomendacoes.html
@@ -61,6 +61,22 @@
                         <ul>
                             <li><a target="_blank" href="http://www.debian.org">Debian Linux</a></li>
                             <li><a target="_blank" href="http://www.mono-project.com">Plataforma Mono</a></li>
+                            <li><a target="_blank" href="https://www.winehq.org">Plataforma Wine</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2>Comunidades de programa&ccedil;&atilde;o</h2>
+                        <ul>
+                            <li><a target="_blank" href="http://www.codeproject.com">Code Project</a></li>
+                            <li><a target="_blank" href="http://www.stackoverflow.com">Stack Overflow</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2>Blogs que leio</h2>
+                        <ul>
+                            <li><a target="_blank" href="http://ivanskiorleilembra.blogspot.com.br/">Orlei Ivanski</a></li>
+                            <li><a target="_blank" href="http://tirania.org/blog">Miguel de Icaza</a></li>
+                            <li><a target="_blank" href="http://eduardolegatti.blogspot.com.br">Eduardo Legatti</a></li>
                         </ul>
                     </li>
                 </ul>
