--- a/curso/modulo1lista2.html
+++ b/curso/modulo1lista2.html
@@ -2,7 +2,7 @@
 <html>
  <head>
   <title>
-   Made with Remarkable!
+   Curso de Programa&ccedil;&atilde;o C#
   </title>
   <link href="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/styles/github.min.css" rel="stylesheet"/>
   <script src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.1/highlight.min.js">
