5 primeiros exercícios do capítulo 3 com respostas

--- a/modulo1.html
+++ b/modulo1.html
@@ -69,17 +69,20 @@
                             
                             <!-- capitulo 3 -->
                             <tr>
-                                <td rowspan=3>Cap&iacute;tulo 3 - Fluxo de C&oacute;digo e Operador Condicional</td>
-                                <td rowspan=3><a href="curso/modulo1capitulo3.pptx">Slides</a></td>
-                                <td rowspan=3><a target="_blank" href="curso/modulo1lista3.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=3>Respostas</td>
+                                <td rowspan=4>Cap&iacute;tulo 3 - Fluxo de C&oacute;digo e Operador Condicional</td>
+                                <td rowspan=4><a href="curso/modulo1capitulo3.pptx">Slides</a></td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo1lista3.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo1respostas3.html">Respostas</a></td>
                                 <td><a target="_blank" href="https://www.youtube.com/watch?v=pDN8LGXD21M">Videoaula 09/08/2014</a></td>
                             </tr>
                             <tr>
                                 <td><a target="_blank" href="https://www.youtube.com/watch?v=LSiDjso_ktk">Videoaula 10/08/2014</a></td>
                             </tr>
                             <tr>
-                                <td>Videoaula 16/08/2014</td>
+                                <td>Videoaula 16/08/2014 (<a target="_blank" href="http://youtu.be/MQo59jUxSuw">video 1</a>) (<a target="_blank" href="http://youtu.be/KVr4Xd921a8">video 2</a>) (<a target="_blank" href="http://youtu.be/hycvzlaIhyk">video 3</a>)</td>
+                            </tr>
+                            <tr>
+                                <td>Videoaula 17/08/2014 (<a target="_blank" href="http://youtu.be/-qzFe1mKvpM">video 1</a>) (<a target="_blank" href="http://youtu.be/SWBzIOBC4Ak">video 2</a>) (<a target="_blank" href="http://youtu.be/c7qPu_ZPjNA">video 3</a>)</td>
                             </tr>
                             
                             <!-- capitulo 4 -->
