--- a/modulo1.html
+++ b/modulo1.html
@@ -69,10 +69,10 @@
                             
                             <!-- capitulo 3 -->
                             <tr>
-                                <td rowspan=4>Cap&iacute;tulo 3 - Fluxo de C&oacute;digo e Operador Condicional</td>
-                                <td rowspan=4><a href="curso/modulo1capitulo3.pptx">Slides</a></td>
-                                <td rowspan=4><a target="_blank" href="curso/modulo1lista3.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=4><a target="_blank" href="curso/modulo1respostas3.html">Respostas</a></td>
+                                <td rowspan=6>Cap&iacute;tulo 3 - Fluxo de C&oacute;digo e Operador Condicional</td>
+                                <td rowspan=6><a href="curso/modulo1capitulo3.pptx">Slides</a></td>
+                                <td rowspan=6><a target="_blank" href="curso/modulo1lista3.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=6><a target="_blank" href="curso/modulo1respostas3.html">Respostas</a></td>
                                 <td><a target="_blank" href="https://www.youtube.com/watch?v=pDN8LGXD21M">Videoaula 09/08/2014</a></td>
                             </tr>
                             <tr>
@@ -83,6 +83,12 @@
                             </tr>
                             <tr>
                                 <td>Videoaula 17/08/2014 (<a target="_blank" href="http://youtu.be/-qzFe1mKvpM">video 1</a>) (<a target="_blank" href="http://youtu.be/SWBzIOBC4Ak">video 2</a>) (<a target="_blank" href="http://youtu.be/c7qPu_ZPjNA">video 3</a>)</td>
+                            </tr>
+                            <tr>
+                                <td>Videoaula 23/08/2014 (<a target="_blank" href="http://youtu.be/GtNMkzdmimQ">video 1</a>) (<a target="_blank" href="http://youtu.be/QLAw83ZOvUg">video 2</a>) (<a target="_blank" href="http://youtu.be/0NHYDTjD9tc">video 3</a>)</td>
+                            </tr>
+                            <tr>
+                                <td>Videoaula 24/08/2014</td>
                             </tr>
                             
                             <!-- capitulo 4 -->
