--- a/modulo1.html
+++ b/modulo1.html
@@ -88,7 +88,7 @@
                                 <td>Videoaula 23/08/2014 (<a target="_blank" href="http://youtu.be/GtNMkzdmimQ">video 1</a>) (<a target="_blank" href="http://youtu.be/QLAw83ZOvUg">video 2</a>) (<a target="_blank" href="http://youtu.be/0NHYDTjD9tc">video 3</a>)</td>
                             </tr>
                             <tr>
-                                <td>Videoaula 24/08/2014</td>
+                                <td>Videoaula 24/08/2014 (<a target="_blank" href="http://youtu.be/ZNxDR3s0s9I">video 1</a>) (<a target="_blank" href="http://youtu.be/osZ3RaXw6m0">video 2</a>) (<a target="_blank" href="http://youtu.be/4zBL9UfqVy0">video 3</a>)</td>
                             </tr>
                             
                             <!-- capitulo 4 -->
@@ -97,7 +97,7 @@
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td>Videoaula 30/08/2014</td>
                             </tr>
                             
                             <!-- capitulo 5 -->
