--- a/modulo1.html
+++ b/modulo1.html
@@ -95,7 +95,7 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 4 - Operador de Repeti&ccedil;&atilde;o</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1>Respostas</td>
                                 <td>Videoaula 30/08/2014</td>
                             </tr>
