--- a/modulo1.html
+++ b/modulo1.html
@@ -93,12 +93,15 @@
                             
                             <!-- capitulo 4 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 4 - Operador de Repeti&ccedil;&atilde;o</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=1>Respostas</td>
-                                <td>Videoaula 30/08/2014</td>
+                                <td rowspan=2>Cap&iacute;tulo 4 - Operador de Repeti&ccedil;&atilde;o</td>
+                                <td rowspan=2><a href="curso/modulo1capitulo4.pptx">Slides</a></td></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas4.html"></td>
+                                <td>Videoaula 06/09/2014</td>
                             </tr>
+                            <tr>
+                                <td>Videoaula 07/09/2014</td>
+                            <tr/>
                             
                             <!-- capitulo 5 -->
                             <tr>
