--- a/modulo1.html
+++ b/modulo1.html
@@ -96,7 +96,7 @@
                                 <td rowspan=2>Cap&iacute;tulo 4 - Operador de Repeti&ccedil;&atilde;o</td>
                                 <td rowspan=2><a href="curso/modulo1capitulo4.pptx">Slides</a></td></td>
                                 <td rowspan=2><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas4.html"></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas4.html">Respostas</a></td>
                                 <td>Videoaula 06/09/2014</td>
                             </tr>
                             <tr>
