--- a/modulo1.html
+++ b/modulo1.html
@@ -97,10 +97,10 @@
                                 <td rowspan=2><a href="curso/modulo1capitulo4.pptx">Slides</a></td></td>
                                 <td rowspan=2><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=2><a target="_blank" href="curso/modulo1respostas4.html">Respostas</a></td>
-                                <td>Videoaula 06/09/2014</td>
+                                <td>Videoaula 06/09/2014 (<a target="_blank" href="http://youtu.be/2qYMzzQY2yw">video 1</a>) (<a target="_blank" href="http://youtu.be/fEAsYaBQLHI">video 2</a>) (<a target="_blank" href="http://youtu.be/kAlxiqyX_Io">video 3</a>) (<a target="_blank" href="http://youtu.be/GmQ9MXHqhxI">video 4</a>)</td>
                             </tr>
                             <tr>
-                                <td>Videoaula 07/09/2014</td>
+                                <td>Videoaula 07/09/2014 (<a target="_blank" href="http://youtu.be/DPYAtqXqU7E">video 1</a>) (<a target="_blank" href="http://youtu.be/lie5nC3Z7Lo">video 2</a>)</td>
                             <tr/>
                             
                             <!-- capitulo 5 -->
@@ -141,7 +141,7 @@
                         </table>
                         </p>
                     </div>
-                    <p class="meta">Curitiba, 13 de agosto de 2014.</p>
+                    <p class="meta">Curitiba, 8 de setembro de 2014.</p>
                 </div>
                 
             </div>
