--- a/sobremim.html
+++ b/sobremim.html
@@ -20,7 +20,8 @@
                 <li class="first"><a href="index.html" accesskey="1" title="In&iacute;cio">In&iacute;cio</a></li>
                 <li><a href="projetos.html" accesskey="2" title="Projetos">Projetos</a></li>
                 <li><a href="recomendacoes.html" accesskey="3" title="Recomenda&ccedil;&otilde;es">Recomenda&ccedil;&otilde;es</a></li>
-                <li><a class="current" href="sobremim.html" accesskey="4" title="Sobre mim">Sobre mim</a></li>
+                <li><a href="artigos.html" accesskey="4" title="Artigos">Artigos</a></li>
+                <li><a class="current" href="sobremim.html" accesskey="5" title="Sobre mim">Sobre mim</a></li>
             </ul>
         </div>
         <hr />
@@ -58,6 +59,12 @@
                         <ul>
                             <li><a href="mailto:william.ivanski@gmail.com">E-mail</a></li>
                             <li><a target="_blank" href="https://plus.google.com/+WilliamIvanski/about">Google+</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2>Meus blogs</h2>
+                        <ul>
+                            <li><a href="http://therubikcat.blogspot.com.br">The Rubik Cat</a></li>
                         </ul>
                     </li>
                     <li>
