Lançamento da Spartacus

--- a/curso.html
+++ b/curso.html
@@ -75,6 +75,13 @@
                             <li><a href="modulo3.html">M&oacute;dulo III</a></li>
                         </ul>
                     </li>
+                    <li>
+                        <h2><a>Biblioteca Spartacus</a></h2>
+                        <ul>
+                            <li><a href="https://github.com/wind39/spartacus">Projeto no GitHub</a></li>
+                            <li><a href="spartacus/Spartacus-0.30.0.zip">Download vers&atilde;o 0.30.0</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
             <!-- end sidebar -->
