--- a/projetos.html
+++ b/projetos.html
@@ -85,6 +85,7 @@
                         <ul>
                             <li><a href="https://github.com/wind39/spartacus">Projeto no GitHub</a></li>
                             <li><a href="spartacus/Spartacus-0.30.0.zip">Download vers&atilde;o 0.30.0</a></li>
+                            <li><a href="spartacus/Spartacus-0.30.0.pdf">Documenta&ccedil;&atilde;o vers&atilde;o 0.30.0</a></li>
                         </ul>
                     </li>
                 </ul>
