--- a/modulo3.html
+++ b/modulo3.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>William Ivanski</title>
+        <title>William Ivanski - Curso - M&oacute;dulo III</title>
         
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="" />
