--- a/modulo1.html
+++ b/modulo1.html
@@ -105,14 +105,20 @@
                             
                             <!-- capitulo 4 -->
                             <tr>
-                                <td rowspan=2>Cap&iacute;tulo 4 - Operador de Repeti&ccedil;&atilde;o</td>
-                                <td rowspan=2><a href="curso/modulo1capitulo4.pptx">Slides</a></td></td>
-                                <td rowspan=2><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas4.html">Respostas</a></td>
+                                <td rowspan=4>Cap&iacute;tulo 4 - Operador de Repeti&ccedil;&atilde;o</td>
+                                <td rowspan=4><a href="curso/modulo1capitulo4.pptx">Slides</a></td></td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo1lista4.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo1respostas4.html">Respostas</a></td>
                                 <td>Videoaula 06/09/2014 (<a target="_blank" href="http://youtu.be/2qYMzzQY2yw">video 1</a>) (<a target="_blank" href="http://youtu.be/fEAsYaBQLHI">video 2</a>) (<a target="_blank" href="http://youtu.be/kAlxiqyX_Io">video 3</a>) (<a target="_blank" href="http://youtu.be/GmQ9MXHqhxI">video 4</a>)</td>
                             </tr>
                             <tr>
                                 <td>Videoaula 07/09/2014 (<a target="_blank" href="http://youtu.be/DPYAtqXqU7E">video 1</a>) (<a target="_blank" href="http://youtu.be/lie5nC3Z7Lo">video 2</a>)</td>
+                            <tr/>
+                            <tr>
+                                <td>Videoaula 13/09/2014 (<a target="_blank" href="http://youtu.be/2Hwr4ELQFP4">video 1</a>) (<a target="_blank" href="http://youtu.be/8BJjmPbBDbo">video 2</a>)</td>
+                            <tr/>
+                            <tr>
+                                <td>Videoaula 14/09/2014 (<a target="_blank" href="http://youtu.be/D2yqw1lyOiQ">video 1</a>) (<a target="_blank" href="http://youtu.be/3Ktnkzav8RA">video 2</a>)</td>
                             <tr/>
                             
                             <!-- capitulo 5 -->
