Colocando botão Seguir em todas as páginas

--- a/projetos.html
+++ b/projetos.html
@@ -66,6 +66,7 @@
         
             <!-- start sidebar -->
             <div id="sidebar">
+                <div class="g-follow" data-annotation="bubble" data-height="20" data-href="//plus.google.com/u/0/113434597235835606932" data-rel="author"></div></br></br></br>
                 <ul>
                     <li>
                         <h2><a href="curso.html">Curso de Programa&ccedil;&atilde;o C#</a></h2>
