--- a/recomendacoes.html
+++ b/recomendacoes.html
@@ -63,6 +63,7 @@
             
             <!-- start sidebar -->
             <div id="sidebar">
+                <div class="g-follow" data-annotation="bubble" data-height="20" data-href="//plus.google.com/u/0/113434597235835606932" data-rel="author"></div></br></br></br>
                 <ul>
                     <li>
                         <h2>Projetos que apoio</h2>
