--- a/curso.html
+++ b/curso.html
@@ -90,7 +90,7 @@
                         </ul>
                     </li>
                     <li>
-                        <h2><a>Biblioteca Spartacus</a></h2>
+                        <h2><a href="spartacus.html">Biblioteca Spartacus</a></h2>
                         <ul>
                             <li><a href="https://github.com/wind39/spartacus">Projeto no GitHub</a></li>
                             <li><a href="spartacus/Spartacus-0.30.0.zip">Download vers&atilde;o 0.30.0</a></li>
