--- a/artigos.html
+++ b/artigos.html
@@ -45,8 +45,8 @@
             <!-- start content -->
             <div id="widecontent">
             
-                <a id="nabblelink" href="http://william-ivanski-artigos.65133.x6.nabble.com/">William Ivanski Artigos</a>
-                <script src="http://william-ivanski-artigos.65133.x6.nabble.com/embed/f1"></script>
+                <a id="nabblelink" href="http://artigos.65133.x6.nabble.com/">Artigos</a>
+                <script src="http://artigos.65133.x6.nabble.com/embed/f1"></script>
                 
             </div>
             <!-- end content -->
