--- a/recomendacoes.html
+++ b/recomendacoes.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>William Ivanski</title>
+        <title>William Ivanski - Recomenda&ccedil;&otilde;s</title>
         
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="" />
