--- a/sobremim.html
+++ b/sobremim.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>William Ivanski</title>
+        <title>William Ivanski - Sobre mim</title>
         
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="" />
@@ -71,7 +71,7 @@
                     <li>
                         <h2>Contato</h2>
                         <ul>
-                            <li><a href="mailto:william.ivanski@gmail.com">E-mail</a></li>
+                            <li><a href="mailto:william.ivanski@gmail.com">E-mail: william dot ivanski at gmail dot com</a></li>
                             <li><a target="_blank" href="https://plus.google.com/+WilliamIvanski/about">Google+</a></li>
                         </ul>
                     </li>
