--- a/spartacus.html
+++ b/spartacus.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>William Ivanski</title>
+        <title>William Ivanski - Spartacus</title>
         
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="" />
