--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <head>
         <title>William Ivanski</title>
         
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="" />
         <meta name="description" content="" />
