--- a/spartacus.html
+++ b/spartacus.html
@@ -2,7 +2,7 @@
     <head>
         <title>William Ivanski - Spartacus</title>
         
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
         
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <meta name="keywords" content="" />
