Atualizando domínio do Nabble

--- a/artigos.html
+++ b/artigos.html
@@ -47,8 +47,8 @@
             <!-- start content -->
             <div id="widecontent">
             
-                <a id="nabblelink" href="http://artigos.65133.x6.nabble.com/">Artigos</a>
-                <script src="http://artigos.65133.x6.nabble.com/embed/f1"></script>
+                <a id="nabblelink" href="http://artigos.williamivanski.com.br/">Artigos</a>
+                <script src="http://artigos.williamivanski.com.br/embed/f1"></script>
                 
             </div>
             <!-- end content -->
